--- a/tools/VirtualLpp/vc2013/VirtualLpp.vcxproj.filters
+++ b/tools/VirtualLpp/vc2013/VirtualLpp.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="..\src\VirtualPad.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\MidiConnection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
@@ -177,6 +180,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\include\voices.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\MidiConnection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
